// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Natura Theme it should match Natura Dark theme snapshot: Natura Dark Theme 1`] = `
Object {
  "avatarSizes": Object {
    "large": Object {
      "fontSize": "1rem",
      "size": 48,
    },
    "small": Object {
      "fontSize": ".875rem",
      "size": 32,
    },
    "standard": Object {
      "fontSize": "1rem",
      "size": 40,
    },
    "tiny": Object {
      "fontSize": ".625rem",
      "size": 24,
    },
    "xlarge": Object {
      "fontSize": "1.5rem",
      "size": 80,
    },
  },
  "buttonSize": Object {
    "large": Object {
      "minHeight": 48,
      "paddingBottom": 16,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    },
    "medium": Object {
      "minHeight": 40,
      "paddingBottom": 12,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 12,
    },
    "small": Object {
      "minHeight": 32,
      "paddingBottom": 8,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 8,
    },
  },
  "overrides": Object {
    "MuiAvatar": Object {
      "colorDefault": Object {
        "color": "#FAFAFA",
      },
    },
    "MuiButton": Object {
      "outlinedPrimary": Object {
        "color": "#FAFAFA",
      },
      "outlinedSecondary": Object {
        "color": "#FAFAFA",
      },
      "root": Object {
        "fontSize": "0.875rem",
        "minHeight": "40px",
        "padding": "8px 16px",
      },
      "sizeLarge": Object {
        "fontSize": "0.875rem",
        "minHeight": "48px",
      },
      "sizeSmall": Object {
        "fontSize": "0.875rem",
        "minHeight": "32px",
      },
    },
  },
  "palette": Object {
    "background": Object {
      "default": "#000000",
      "defaultContrastText": "#FFFFFF",
      "paper": "#333333",
      "paperConstrastText": "#FFFFFF",
    },
    "complementary": Object {
      "link": "#227BBD",
      "warning": "#FCC433",
    },
    "error": Object {
      "contrastText": "#333333",
      "main": "#E74627",
    },
    "primary": Object {
      "contrastText": "#333333",
      "dark": "#EF8426",
      "light": "#FEFDE8",
      "main": "#F4AB34",
    },
    "secondary": Object {
      "contrastText": "#000000",
      "dark": "#FF6B0B",
      "light": "#FFF8E1",
      "main": "#FF6B0B",
    },
    "success": Object {
      "contrastText": "#FFFFFF",
      "main": "#569A32",
    },
    "text": Object {
      "disabled": "#222222",
      "hint": "#777777",
      "primary": "#FAFAFA",
      "secondary": "#BBBBBB",
    },
    "type": "light",
  },
  "shape": Object {
    "badgeBorderRadius": 100,
    "borderRadius": 4,
  },
  "spacing": 8,
  "typography": Object {
    "android": Object {
      "fontFamily": "System",
      "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
      "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
      "fontFamilyBrand3": undefined,
      "fontWeightBold": 700,
      "fontWeightLight": 300,
      "fontWeightMedium": 500,
      "fontWeightRegular": 400,
    },
    "body1": Object {
      "fontSize": "1rem",
      "fontWeight": 400,
    },
    "body2": Object {
      "fontSize": "0.875rem",
      "fontWeight": 400,
    },
    "button": Object {
      "fontSize": "0.875rem",
      "fontWeight": 600,
    },
    "caption": Object {
      "fontSize": "0.75rem",
      "fontWeight": 400,
    },
    "h1": Object {
      "fontSize": "6rem",
      "fontWeight": 300,
    },
    "h2": Object {
      "fontSize": "3.75rem",
      "fontWeight": 300,
    },
    "h3": Object {
      "fontSize": "3rem",
      "fontWeight": 400,
    },
    "h4": Object {
      "fontSize": "2.125rem",
      "fontWeight": 400,
    },
    "h5": Object {
      "fontSize": "1.5rem",
      "fontWeight": 400,
    },
    "h6": Object {
      "fontSize": "1.25rem",
      "fontWeight": 600,
    },
    "iOS": Object {
      "fontFamily": "System",
      "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
      "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
      "fontFamilyBrand3": undefined,
      "fontWeightBold": 700,
      "fontWeightLight": 300,
      "fontWeightMedium": 500,
      "fontWeightRegular": 400,
    },
    "overline": Object {
      "fontSize": "0.75rem",
      "fontWeight": 400,
    },
    "subtitle1": Object {
      "fontSize": "1rem",
      "fontWeight": 400,
    },
    "subtitle2": Object {
      "fontSize": "0.875rem",
      "fontWeight": 500,
    },
    "web": Object {
      "fontFamily": "\\"Roboto\\", sans-serif",
      "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
      "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
      "fontFamilyBrand3": undefined,
      "fontWeightBold": 700,
      "fontWeightLight": 300,
      "fontWeightMedium": 500,
      "fontWeightRegular": 400,
    },
  },
}
`;

exports[`Natura Theme it should match Natura Dark theme snapshot: Natura Light Theme 1`] = `
Object {
  "avatarSizes": Object {
    "large": Object {
      "fontSize": "1rem",
      "size": 48,
    },
    "small": Object {
      "fontSize": ".875rem",
      "size": 32,
    },
    "standard": Object {
      "fontSize": "1rem",
      "size": 40,
    },
    "tiny": Object {
      "fontSize": ".625rem",
      "size": 24,
    },
    "xlarge": Object {
      "fontSize": "1.5rem",
      "size": 80,
    },
  },
  "buttonSize": Object {
    "large": Object {
      "minHeight": 48,
      "paddingBottom": 16,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    },
    "medium": Object {
      "minHeight": 40,
      "paddingBottom": 12,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 12,
    },
    "small": Object {
      "minHeight": 32,
      "paddingBottom": 8,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 8,
    },
  },
  "overrides": Object {
    "MuiAvatar": Object {
      "colorDefault": Object {
        "color": "#333333",
      },
    },
    "MuiButton": Object {
      "outlinedPrimary": Object {
        "color": "#333333",
      },
      "outlinedSecondary": Object {
        "color": "#333333",
      },
      "root": Object {
        "fontSize": "0.875rem",
        "minHeight": "40px",
        "padding": "8px 16px",
      },
      "sizeLarge": Object {
        "fontSize": "0.875rem",
        "minHeight": "48px",
      },
      "sizeSmall": Object {
        "fontSize": "0.875rem",
        "minHeight": "32px",
      },
    },
  },
  "palette": Object {
    "background": Object {
      "default": "#FFFFFF",
      "defaultContrastText": "#000000",
      "paper": "#FAFAFA",
      "paperConstrastText": "#333333",
    },
    "complementary": Object {
      "link": "#227BBD",
      "warning": "#FCC433",
    },
    "error": Object {
      "contrastText": "#333333",
      "main": "#E74627",
    },
    "primary": Object {
      "contrastText": "#333333",
      "dark": "#EF8426",
      "light": "#FEFDE8",
      "main": "#F4AB34",
    },
    "secondary": Object {
      "contrastText": "#000000",
      "dark": "#FF6B0B",
      "light": "#FFF8E1",
      "main": "#FF6B0B",
    },
    "success": Object {
      "main": "#569A32",
    },
    "text": Object {
      "disabled": "#EEEEEE",
      "hint": "#BBBBBB",
      "primary": "#333333",
      "secondary": "#777777",
    },
    "type": "light",
  },
  "shape": Object {
    "badgeBorderRadius": 100,
    "borderRadius": 4,
  },
  "spacing": 8,
  "typography": Object {
    "android": Object {
      "fontFamily": "System",
      "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
      "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
      "fontFamilyBrand3": undefined,
      "fontWeightBold": 700,
      "fontWeightLight": 300,
      "fontWeightMedium": 500,
      "fontWeightRegular": 400,
    },
    "body1": Object {
      "fontSize": "1rem",
      "fontWeight": 400,
    },
    "body2": Object {
      "fontSize": "0.875rem",
      "fontWeight": 400,
    },
    "button": Object {
      "fontSize": "0.875rem",
      "fontWeight": 600,
    },
    "caption": Object {
      "fontSize": "0.75rem",
      "fontWeight": 400,
    },
    "h1": Object {
      "fontSize": "6rem",
      "fontWeight": 300,
    },
    "h2": Object {
      "fontSize": "3.75rem",
      "fontWeight": 300,
    },
    "h3": Object {
      "fontSize": "3rem",
      "fontWeight": 400,
    },
    "h4": Object {
      "fontSize": "2.125rem",
      "fontWeight": 400,
    },
    "h5": Object {
      "fontSize": "1.5rem",
      "fontWeight": 400,
    },
    "h6": Object {
      "fontSize": "1.25rem",
      "fontWeight": 600,
    },
    "iOS": Object {
      "fontFamily": "System",
      "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
      "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
      "fontFamilyBrand3": undefined,
      "fontWeightBold": 700,
      "fontWeightLight": 300,
      "fontWeightMedium": 500,
      "fontWeightRegular": 400,
    },
    "overline": Object {
      "fontSize": "0.75rem",
      "fontWeight": 400,
    },
    "subtitle1": Object {
      "fontSize": "1rem",
      "fontWeight": 400,
    },
    "subtitle2": Object {
      "fontSize": "0.875rem",
      "fontWeight": 500,
    },
    "web": Object {
      "fontFamily": "\\"Roboto\\", sans-serif",
      "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
      "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
      "fontFamilyBrand3": undefined,
      "fontWeightBold": 700,
      "fontWeightLight": 300,
      "fontWeightMedium": 500,
      "fontWeightRegular": 400,
    },
  },
}
`;
